<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:id="@id/parentRelative">

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/btnCheese"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/viewFinder"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/take_picture"
            android:layout_marginHorizontal="5dp"
            android:textSize="12sp"
            android:textColor="@color/secondary_text_default_material_light" />

        <RelativeLayout
            android:id="@+id/analyzer_display_area"
            android:layout_width="match_parent"
            android:layout_below="@id/btnCheese"
            android:background="#D3D3D3"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/analysis_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/area_for_analysis_image"
                android:scaleType="centerCrop"
                android:visibility="visible"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="186dp"
                android:layout_marginTop="91dp"
                android:contentDescription="@string/here"
                android:scaleType="centerCrop"
                android:src="@drawable/red_circle"
                android:visibility="invisible" />
        </RelativeLayout>

        <Button
            android:id="@+id/declare_pos_control"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_below="@+id/analyzer_display_area"
            android:layout_alignParentStart="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:text="@string/select_pos_controls" />

        <Button
            android:id="@+id/declare_neg_control"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_below="@+id/analyzer_display_area"
            android:layout_toStartOf="@id/declare_test"
            android:layout_toEndOf="@id/declare_pos_control"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:text="@string/select_neg_controls" />

        <Button
            android:id="@+id/declare_test"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_below="@+id/analyzer_display_area"
            android:layout_toStartOf="@+id/start_analysis"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:text="@string/select_samples" />

        <Button
            android:id="@+id/start_analysis"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_below="@+id/analyzer_display_area"
            android:layout_alignParentEnd="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="5dp"
            android:textSize="12sp"
            android:text="@string/start_analysis" />

    </RelativeLayout>
</layout>